--- a/assets/css/slide.css
+++ b/assets/css/slide.css
@@ -5,6 +5,8 @@
     height: 40px;
     top: 0px;
     left: 0px;
+    border: 1px solid #d4d4d4;
+    border-right: none;
 }
 
 .jssort12 .p {
@@ -14,14 +16,13 @@
     top: 0;
     left: 0px;
     padding: 0px;
-    margin: 0px 2px;
 }
 .jssort12{
   height: 40px;
 }
 .jssort12 .pav .w,
 .jssort12 .pdn .w {
-    border-bottom: 1px solid #fff;
+    border-bottom: none;
 }
 
 .jssort12 .c {
@@ -44,8 +45,9 @@
 
 .jssort12 .pav .c,
 .jssort12 .p:hover .c {
-    background-color: #17ae97;
-    color: #fff;
+    color: #17ae97;
+    background-color:#fff;
+    border-top: 3px solid #17ae97;
 }
 .thumb{
   left: 0px !important;
@@ -64,9 +66,36 @@
 .wrap-slide{
   cursor: default; 
   position: relative; 
-  top: 50px; 
-  left: 0px !important; 
+  top: 50px;
+  left: 0px;
   width: 598px; 
   height: 2000px; 
   overflow: hidden; 
+}
+
+@media only screen and (min-width: 320px) and (max-width: 479px){
+  .wrap-slider-outer {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 318px;
+    display: inline-block;
+    padding-left: 10px;
+  }
+   .wrap-slide{
+    left: -200px !important;
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 767px){
+  .wrap-slide{
+    left: -200px !important;
+    width: 800px !important;
+  }
+  .row-res{
+    margin: 0px;
+  }
+  .wrap-slider-outer{
+    width: 470px;
+    padding-left: 6px;
+  }
 }
